Fix hours alignment

--- a/src/app/shared/component/time-input/time-input.component.scss
+++ b/src/app/shared/component/time-input/time-input.component.scss
@@ -6,11 +6,7 @@
 	font-weight: 700;
 
 	&__input {
-		width: 1.5em;
-
-		&_align_right {
-			text-align: right;
-		}
+		width: 2ch;
 	}
 
 	&__colon {
